# jag

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/jag/: Cargo.toml
crates/jag-draw/: Cargo.toml  README.md
crates/jag-draw/src/: allocator.rs  box_shadow.rs  color.rs  compositor.rs  display_list.rs  hit_test.rs  image_cache.rs  lib.rs  painter.rs  pass_manager.rs  pdf_backend.rs  pipeline.rs  scene.rs  svg.rs  svg_fontdb.rs  svg_fontdb_tests.rs  svg_geometry.rs  text.rs  text_layout.rs  upload.rs
crates/jag-draw/src/pass_manager/: box_shadow.rs  draw_shapes.rs  filter.rs  paint_root.rs  paint_root_gradients.rs  quad_prep.rs  render.rs  render_direct.rs  render_offscreen.rs  rounded.rs  scrim_cutout.rs  setup.rs  targets.rs  text_prep.rs
crates/jag-draw/src/pipeline/: background_blur.rs  color_filter.rs  composite.rs  drop_shadow_filter.rs  mask_filter.rs  scrim_stencil.rs  shadow.rs  shadow_composite_instance.rs  smaa.rs  solid.rs  text_image.rs
crates/jag-draw/src/upload/: display_list.rs  gradients.rs  path_clip.rs  shapes.rs  tessellate.rs  types.rs  verts.rs
crates/jag-draw/src/upload/unified/: draws.rs  fills.rs  mod.rs  rounded_rect.rs  strokes_paths.rs
crates/jag-draw/tests/: box_shadow_test.rs  shadow_extraction_test.rs
crates/jag-shaders/: Cargo.toml  README.md
crates/jag-shaders/src/: lib.rs  shadow_instance.rs
crates/jag-shaders/tests/: shadow_instance_composite_shader_test.rs  shadow_instance_shader_test.rs
crates/jag-surface/: Cargo.toml  README.md
crates/jag-surface/src/: canvas.rs  canvas_ext.rs  lib.rs  readback.rs  shapes.rs  surface.rs
crates/jag-surface/src/canvas/: helpers.rs  images_state.rs  masks.rs  shapes.rs  tests.rs  text.rs  text_extra.rs
crates/jag-surface/src/surface/: cached.rs  core.rs  frame.rs  masks.rs  opacity.rs  text_mask.rs
crates/jag-surface/tests/: opacity_compositor.rs
crates/jag-text/: Cargo.toml  README.md
crates/jag-text/examples/: cursor_demo.rs  cursor_movement_demo.rs  hit_test_demo.rs  selection_demo.rs  text_editing_demo.rs
crates/jag-text/src/: lib.rs
crates/jag-text/src/font/: face.rs  loader.rs
crates/jag-text/src/layout/: text_layout.rs
crates/jag-text/src/shaping/: mod.rs  shaped_run.rs  shaper.rs
crates/jag-text/src/unicode/: mod.rs
crates/jag-ui/: Cargo.toml  README.md
crates/jag-ui/src/: event.rs  focus.rs  hit_region.rs  layout.rs  lib.rs  theme.rs  ui.rs
crates/jag-ui/src/elements/: alert.rs  badge.rs  button.rs  card.rs  checkbox.rs  container.rs  date_picker.rs  image_element.rs  input_box.rs  link.rs  mod.rs  modal.rs  radio.rs  select.rs  slider.rs  table.rs  text.rs  text_align.rs  text_area.rs  toggle_switch.rs
crates/jag-ui/src/widgets/: mod.rs  popup_menu.rs  tab_bar.rs  text_input.rs  types.rs
crates/jag/src/: lib.rs
docs/: design.md  implementation-plan.md
docs/pull-requests/: image-decode-by-content.md
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
