[package]
name = "jag-draw"
version = "0.1.1"
edition = "2024"
description = "GPU-accelerated 2D rendering engine built on wgpu"
license = "MIT"
repository = "https://github.com/jag-rs/jag"
keywords = ["gpu", "rendering", "2d", "wgpu", "graphics"]
categories = ["graphics", "rendering"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
wgpu = { workspace = true }
palette = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jag-shaders = { path = "../jag-shaders", version = "0.1.1" }
fontdue = { workspace = true }
image = { workspace = true }
swash = { workspace = true }
lyon_tessellation = "1.0"
lyon_path = "1.0"
lyon_geom = "1.0"
usvg = { version = "0.42", default-features = true }
resvg = { version = "0.42", default-features = true }
tiny-skia = "0.11"
jag-text = { path = "../jag-text", version = "0.1.1" }
fontdb = { workspace = true }
pdf-writer = { workspace = true, optional = true }

[features]
default = []
fontdue-rgb-patch = []
pdf_export = ["dep:pdf-writer"]
