[package]
name = "jag-shaders"
version = "0.1.1"
description = "WGSL shader modules for jag-draw"
license = "MIT"
repository = "https://github.com/jag-rs/jag"
edition = "2024"
keywords = ["gpu", "shaders", "wgsl", "wgpu", "rendering"]
categories = ["graphics", "rendering"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
bytemuck = { workspace = true }
