[package]
name = "jag-surface"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Canvas-style drawing API on top of jag-draw"
keywords = ["canvas", "drawing", "2d", "gpu", "graphics"]
categories = ["graphics", "rendering"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
jag-draw = { path = "../jag-draw", version = "0.1.0" }
