[package]
name = "jag-ui"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UI elements, widgets, and layout for jag-draw"
keywords = ["ui", "widgets", "layout", "gpu", "gui"]
categories = ["gui", "rendering"]

[dependencies]
jag-draw = { path = "../jag-draw" }
jag-surface = { path = "../jag-surface" }
taffy = { workspace = true }
