[package]
name = "jag-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UI elements, widgets, and layout for jag-draw"
keywords = ["ui", "widgets", "layout", "gpu", "gui"]
categories = ["gui", "rendering"]

[dependencies]
jag-draw = { path = "../jag-draw", version = "0.1.0" }
jag-surface = { path = "../jag-surface", version = "0.1.0" }
taffy = { workspace = true }
