[package]
name = "jag"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU-accelerated 2D rendering and UI toolkit"
keywords = ["gpu", "rendering", "ui", "2d", "wgpu"]
categories = ["graphics", "gui", "rendering"]

[dependencies]
jag-draw = { path = "../jag-draw", version = "0.1.0" }
jag-ui = { path = "../jag-ui", version = "0.1.0" }
jag-surface = { path = "../jag-surface", version = "0.1.0" }
