[package]
name = "jag-demo"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
jag-draw = { path = "../../crates/jag-draw" }
jag-surface = { path = "../../crates/jag-surface" }
jag-ui = { path = "../../crates/jag-ui" }
winit = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
